--- a/config/toxicity/train_iql.yaml
+++ b/config/toxicity/train_iql.yaml
@@ -13,10 +13,10 @@ train_dataset:
     reward_shift: 0.0
     reward_scale: -5.0
     reward_f:
-      name: toxicity_reward
-      # name: score_human_reward
-      # reddit_path: data/reddit_comments/
-      # index_path: data/reddit_comments/train_idxs.json
+      # name: toxicity_reward
+      name: score_human_reward
+      reddit_path: data/reddit_comments/
+      index_path: data/reddit_comments/train_idxs.json
   max_len: 512
   resample_timeout: 0.0
   include_parent: true
@@ -29,10 +29,10 @@ eval_dataset:
     reward_shift: 0.0
     reward_scale: -5.0
     reward_f:
-      name: toxicity_reward
-      # name: score_human_reward
-      # reddit_path: data/reddit_comments/
-      # index_path: data/reddit_comments/test_idxs.json
+      # name: toxicity_reward
+      name: score_human_reward
+      reddit_path: data/reddit_comments/
+      index_path: data/reddit_comments/test_idxs.json
   max_len: 512
   resample_timeout: 0.0
   include_parent: true
@@ -74,20 +74,20 @@ evaluator:
       name: reddit_comments
       cache_id: test_raw_data
     reward_f:
-      name: toxicity_reward
-      # name: model_reward
-      # model:
-      #   name: roberta_binary_reward_model
-      #   dataset:
-      #     name: toxicity_list_dataset
-      #     cache_id: d_train
-      #   roberta_kind: roberta-base
-      #   freeze_roberta: false
-      #   reward_cuttoff: 0.0
-      #   load:
-      #     name: roberta_binary_reward_model
-      #     checkpoint_path: outputs/toxicity/upvote_reward/model.pkl
-      #     strict_load: true
+      # name: toxicity_reward
+      name: model_reward
+      model:
+        name: roberta_binary_reward_model
+        dataset:
+          name: toxicity_list_dataset
+          cache_id: d_train
+        roberta_kind: roberta-base
+        freeze_roberta: false
+        reward_cuttoff: 0.0
+        load:
+          name: roberta_binary_reward_model
+          checkpoint_path: outputs/toxicity/upvote_reward/model.pkl
+          strict_load: true
     include_parent: true
   verbose: true
   kind: sample
@@ -110,7 +110,7 @@ train:
   save_checkpoint_dir: outputs/toxicity/conditional_toxicity_official_iql_test1/
   optim_state_path: null
   epochs: 10000000
-  dataloader_workers: 0
+  dataloader_workers: 1
   bsize: 1
   grad_accum_steps: 64
   log_every: 256
