--- a/config/wordle/train_bc.yaml
+++ b/config/wordle/train_bc.yaml
@@ -46,7 +46,7 @@ train:
   save_checkpoint_dir: outputs/wordle_tweet_bc_test1/
   optim_state_path: null
   epochs: 1
-  dataloader_workers: 1
+  dataloader_workers: 2
   bsize: 64
   grad_accum_steps: 1
   log_every: 256
@@ -57,7 +57,7 @@ train:
   eval_batches: 1
   lr: 1e-4
   weight_decay: 0.01
-  max_steps: null
+  max_steps: 7000
   loss: {}
 
 wandb:
